--- a/zadanie-domowe/Zadanie-15878/index.html
+++ b/zadanie-domowe/Zadanie-15878/index.html
@@ -57,7 +57,8 @@
         Znam już podstawy, co dalej?
     </button>
 
-    <div id="basic" class="collapse">Poznanie narzędzi, które umożliwiają szybszą i sprawniejszą pracę sprawi, że w
+    <div id="basic" class="collapse">
+        Poznanie narzędzi, które umożliwiają szybszą i sprawniejszą pracę sprawi, że w
         przyszłości będziesz
         skutecznym
         koderem. Kurs Front End Developer opiera się na zadaniach praktycznych, podczas których wyrabiasz sobie
