--- a/zadanie-domowe/poprawione-zadanie-faq/index.html
+++ b/zadanie-domowe/poprawione-zadanie-faq/index.html
@@ -30,7 +30,7 @@
                 </h5>
             </div>
 
-            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                     <div class="card-body">
                     Front End Developer to osoba programująca wizualną część strony internetowej. Wykorzystując odpowiednie
                     narzędzia, takie jak HTML5, CSS3 i JavaScript tworzy to, co widoczne jest w przeglądarce, zarówno na ekranie komputera,
